--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:2000/test-database
+spring.datasource.url=jdbc:mysql://192.168.5.1:2000/test-database
 spring.datasource.username=root
 spring.datasource.password=admin123
 spring.jpa.hibernate.ddl-auto=update
